# rust-sam-app

./: .gitignore  Cargo.toml  DEVELOPMENT.md  FINANCIAL_SECURITY.md  README.md  TESTING.md  deploy.sh  samconfig.toml  simple-create-repo.sh  template.yaml  template.yml
.specstory/history/: 2025-03-13_08-59-rust-implementation-of-sam-architecture.md
api-handler/: Cargo.toml
api-handler/src/: main.rs  tests.rs
event-processor/: Cargo.toml
event-processor/src/: main.rs  tests.rs
events/: sqs-event.json
events/test/: create-item.json  delete-item.json  get-item.json  get-items.json  sqs-event.json
shared/: Cargo.toml
shared/src/: config.rs  error.rs  lib.rs  models.rs  repository.rs  tests.rs
