[workspace]
members = ["deep_risk_model"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
ndarray = { version = "0.15", features = ["serde", "rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
pyo3 = { version = "0.20", features = ["extension-module"] }
ndarray-rand = "0.14"
ndarray-stats = "0.5"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
async-trait = "0.1"
actix-web = "4.5"
tracing = "0.1"
thiserror = "1.0"
num-traits = "0.2"
rayon = "1.5"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1 