[package]
name = "api-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
aws-sdk-sqs = "0.28.0"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs" 