[package]
name = "event-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
aws-lambda-events = { version = "0.8.1", features = ["sqs"] }
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs" 